google play boutton added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                         <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#features">How it works</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#features">Features</a>
                     </li>
                     <li class="nav-item">
@@ -28,12 +31,20 @@
     </nav>
     <header class="row">
         <div class="col">
-            <h2> Banner cool </h2>
+            <h1> Administra tus propiedades </h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto expedita maiores molestiae quaerat.
+                A corporis, culpa eveniet ex fuga id inventore laborum officiis praesentium quisquam quos vitae. Cumque
+                fuga, voluptas.
+            </p>
+            <a href="#"><img class="app-badge" src="assets/img/google_play.svg" alt="..."/></a>
         </div>
         <div class="col">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto expedita maiores molestiae quaerat.
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto expedita maiores molestiae quaerat.
                 A corporis, culpa eveniet ex fuga id inventore laborum officiis praesentium quisquam quos vitae. Cumque
-                fuga, voluptas.</p>
+                fuga, voluptas.
+            </p>
         </div>
     </header>
     <aside class="row">
