header and how works section

--- a/index.html
+++ b/index.html
@@ -2,94 +2,84 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Home | Tunido</title>
 </head>
-<body>
-<div class="container" id="page-top">
-    <nav class="navbar navbar-expand-sm navbar-light shadow-sm">
-        <div class="container">
-            <a class="navbar-brand" href="#page-top">TUNIDO</a>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#features">How it works</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#features">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                </ul>
+<body id="page-top">
+<nav class="navbar navbar-expand-lg navbar-light shadow-sm" id="mainNav">
+    <div class="container px-5">
+        <a class="navbar-brand fw-bold" href="#page-top">
+            <img src="assets/img/tunido_logo.png" width="35" height="35" class="d-inline-block align-center" alt="">
+            TUNIDO
+        </a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link me-lg-3" href="#how-works">Como funciona</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link me-lg-3" href="#features">Servicios</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link me-lg-3" href="#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<header>
+    <div class="container px-5 py-5">
+        <div class="row align-items-center">
+            <div class="col-6">
+                <h1 class="display-1 lh-1 mb-3"> Mejores lugares y personas</h1>
+                <p>
+                    Descubre la nueva forma de encontrar casa o departamento para vivir, local para tu negocio o los
+                    mejores inquilinos para tu propeidad
+                </p>
+            </div>
+            <div class="col-6 d-flex align-items-center justify-content-center">
+                <img class="img-fluid" id="searching-home" src="assets/img/searching-home.svg" alt="..."/>
             </div>
         </div>
-    </nav>
-    <header class="row">
-        <div class="col">
-            <h1> Administra tus propiedades </h1>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto expedita maiores molestiae quaerat.
-                A corporis, culpa eveniet ex fuga id inventore laborum officiis praesentium quisquam quos vitae. Cumque
-                fuga, voluptas.
-            </p>
-            <a href="#"><img class="app-badge" src="assets/img/google_play.svg" alt="..."/></a>
+    </div>
+</header>
+<aside class="text-center py-5" id="how-works">
+    <div class="container px-5">
+        <div class="row justify-content-center my-2">
+            <div class="col-8">
+                <h2 class="display-5 text-white"> Con TUNIDO tu puedes... </h2>
+            </div>
         </div>
-        <div class="col">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto expedita maiores molestiae quaerat.
-                A corporis, culpa eveniet ex fuga id inventore laborum officiis praesentium quisquam quos vitae. Cumque
-                fuga, voluptas.
-            </p>
+        <div class="row justify-content-center">
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title mt-3 fw-bold">Arrendar sin complicaciones</h5>
+                        <p class="card-text fs-6 lh-sm">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab blanditiis
+                            dolorum eius ipsam laudantium molestiae nulla, quia similique soluta. A assumenda cupiditate
+                            deserunt harum ipsa nam nostrum odio suscipit! Quidem!
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title mt-3 fw-bold">Encontrar los mejores</h5>
+                        <p class="card-text fs-6 lh-sm">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam at beatae
+                            commodi culpa delectus distinctio ducimus earum hic inventore iure laudantium magni, neque
+                            numquam quos, ratione sed sint ullam voluptates.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </header>
-    <aside class="row">
-        <h2> Motivational quote </h2>
-    </aside>
-    <section class="row" id="about">
-        <h2> About </h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias architecto culpa cum fuga incidunt labore
-            quae quos repudiandae ut vel. Assumenda cupiditate debitis eligendi, incidunt laboriosam pariatur provident
-            temporibus totam!
-        </p>
-    </section>
-    <section class="row" id="how-it-works">
-        <div class="col">
-            <h2> Step 1 </h2>
-        </div>
-        <div class="col">
-            <h2> Step 2 </h2>
-        </div>
-        <div class="col">
-            <h2> Step 3 </h2>
-        </div>
-    </section>
-    <section class="row" id="features">
-        <div class="col">
-            <h2> Features </h2>
-        </div>
-        <div class="col">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto expedita maiores molestiae quaerat.
-                A corporis, culpa eveniet ex fuga id inventore laborum officiis praesentium quisquam quos vitae. Cumque
-                fuga, voluptas.</p>
-        </div>
-        <div class="col">
-            <h2> Features </h2>
-        </div>
-    </section>
-    <footer class="row" id="contact">
-        <h2> Contact </h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet commodi debitis distinctio dolor dolore
-            doloribus eligendi ipsa magnam maxime mollitia nesciunt non nulla odio, odit quibusdam quidem ratione
-            repellat saepe.
-        </p>
-    </footer>
-</div>
+    </div>
+</aside>
+<script src="https://cdn.linearicons.com/free/1.0.0/svgembedder.min.js"></script>
 </body>
 </html>
