small changes to cards in how works section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <nav class="navbar navbar-expand-lg navbar-light shadow-sm" id="mainNav">
     <div class="container px-5">
         <a class="navbar-brand fw-bold" href="#page-top">
-            <img src="assets/img/tunido_logo.png" width="35" height="35" class="d-inline-block align-center" alt="">
+            <img src="assets/img/tunido_logo.png" width="50" height="50" class="d-inline-block align-center" alt="">
             TUNIDO
         </a>
         <div class="collapse navbar-collapse">
@@ -33,10 +33,10 @@
     <div class="container px-5 py-5">
         <div class="row align-items-center">
             <div class="col-6">
-                <h1 class="display-1 lh-1 mb-3"> Mejores lugares y personas</h1>
-                <p>
+                <h1 class="display-1 lh-1"> Mejores lugares y personas</h1>
+                <p class="my-4">
                     Descubre la nueva forma de encontrar casa o departamento para vivir, local para tu negocio o los
-                    mejores inquilinos para tu propeidad
+                    mejores inquilinos para tu propiedad
                 </p>
             </div>
             <div class="col-6 d-flex align-items-center justify-content-center">
@@ -45,19 +45,19 @@
         </div>
     </div>
 </header>
-<aside class="text-center py-5" id="how-works">
+<aside class="py-4 border-warning" id="how-works">
     <div class="container px-5">
-        <div class="row justify-content-center my-2">
-            <div class="col-8">
+        <div class="row justify-content-center my-3">
+            <div class="col-8 text-center">
                 <h2 class="display-5 text-white"> Con TUNIDO tu puedes... </h2>
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-sm-4">
-                <div class="card">
+            <div class="col-lg-3 col-sm-12 my-2 mx-5">
+                <div class="card h-100 px-2 py-3 shadow-lg">
                     <div class="card-body">
-                        <h5 class="card-title mt-3 fw-bold">Arrendar sin complicaciones</h5>
-                        <p class="card-text fs-6 lh-sm">
+                        <h5 class="card-title fw-bold">Arrendar sin complicaciones</h5>
+                        <p class="card-text lh-sm">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab blanditiis
                             dolorum eius ipsam laudantium molestiae nulla, quia similique soluta. A assumenda cupiditate
                             deserunt harum ipsa nam nostrum odio suscipit! Quidem!
@@ -65,11 +65,23 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
-                <div class="card">
+            <div class="col-lg-3 col-sm-12 my-2 mx-5">
+                <div class="card h-100 px-2 py-3 shadow-lg">
                     <div class="card-body">
-                        <h5 class="card-title mt-3 fw-bold">Encontrar los mejores</h5>
-                        <p class="card-text fs-6 lh-sm">
+                        <h5 class="card-title fw-bold">Encontrar los mejores inquilinos o arrendistas</h5>
+                        <p class="card-text lh-sm">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam at beatae
+                            commodi culpa delectus distinctio ducimus earum hic inventore iure laudantium magni, neque
+                            numquam quos, ratione sed sint ullam voluptates.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-12 my-2 mx-5">
+                <div class="card h-100 px-2 py-3 shadow-lg">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">Adminsitrar todas tus propiedades</h5>
+                        <p class="card-text lh-sm">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam at beatae
                             commodi culpa delectus distinctio ducimus earum hic inventore iure laudantium magni, neque
                             numquam quos, ratione sed sint ullam voluptates.
