--- a/index.html
+++ b/index.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Bootstrap icons-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <title>Home | Tunido</title>
 </head>
+
 <body id="page-top">
+
 <nav class="navbar navbar-expand-lg navbar-light shadow-sm" id="mainNav">
     <div class="container px-5">
         <a class="navbar-brand fw-bold" href="#page-top">
             <img src="assets/img/tunido_logo.png" width="50" height="50" class="d-inline-block align-center" alt="">
             TUNIDO
         </a>
-        <div class="collapse navbar-collapse">
+        <button class="navbar-toggler border-0 menu-button" type="button" data-bs-toggle="collapse"
+                data-bs-target="#homeMenu"
+                aria-controls="homeMenu" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="homeMenu">
             <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
                 <li class="nav-item">
                     <a class="nav-link me-lg-3" href="#how-works">Como funciona</a>
@@ -29,35 +40,37 @@
         </div>
     </div>
 </nav>
+<!--informational header-->
 <header>
     <div class="container px-5 py-5">
         <div class="row align-items-center">
-            <div class="col-6">
+            <div class="col-md-6 col-sm-8">
                 <h1 class="display-1 lh-1"> Mejores lugares y personas</h1>
                 <p class="my-4">
                     Descubre la nueva forma de encontrar casa o departamento para vivir, local para tu negocio o los
                     mejores inquilinos para tu propiedad
                 </p>
             </div>
-            <div class="col-6 d-flex align-items-center justify-content-center">
+            <div class="col-md-6 col-sm-4 d-flex align-items-center justify-content-center">
                 <img class="img-fluid" id="searching-home" src="assets/img/searching-home.svg" alt="..."/>
             </div>
         </div>
     </div>
 </header>
-<aside class="py-4 border-warning" id="how-works">
+<!--how works-->
+<aside class="py-5" id="how-works">
     <div class="container px-5">
-        <div class="row justify-content-center my-3">
+        <div class="row justify-content-center pb-4">
             <div class="col-8 text-center">
                 <h2 class="display-5 text-white"> Con TUNIDO tu puedes... </h2>
             </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center text-center">
             <div class="col-lg-3 col-sm-12 my-2 mx-5">
                 <div class="card h-100 px-2 py-3 shadow-lg">
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Arrendar sin complicaciones</h5>
-                        <p class="card-text lh-sm">
+                        <p class="card-text lh-sm info-card">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab blanditiis
                             dolorum eius ipsam laudantium molestiae nulla, quia similique soluta. A assumenda cupiditate
                             deserunt harum ipsa nam nostrum odio suscipit! Quidem!
@@ -68,8 +81,8 @@
             <div class="col-lg-3 col-sm-12 my-2 mx-5">
                 <div class="card h-100 px-2 py-3 shadow-lg">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Encontrar los mejores inquilinos o arrendistas</h5>
-                        <p class="card-text lh-sm">
+                        <h5 class="card-title fw-bold">Encontrar los mejores inquilinos o arrendadores</h5>
+                        <p class="card-text lh-sm info-card">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam at beatae
                             commodi culpa delectus distinctio ducimus earum hic inventore iure laudantium magni, neque
                             numquam quos, ratione sed sint ullam voluptates.
@@ -81,7 +94,7 @@
                 <div class="card h-100 px-2 py-3 shadow-lg">
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Adminsitrar todas tus propiedades</h5>
-                        <p class="card-text lh-sm">
+                        <p class="card-text lh-sm info-card">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam at beatae
                             commodi culpa delectus distinctio ducimus earum hic inventore iure laudantium magni, neque
                             numquam quos, ratione sed sint ullam voluptates.
@@ -92,6 +105,63 @@
         </div>
     </div>
 </aside>
+<!--features-->
+<section class="py-4">
+    <div class="container px-5">
+        <div class="row justify-content-center">
+            <div class="col-sm-6 col-lg-4 text-center my-3">
+                <i class="bi bi-pen"></i>
+                <h3>Firma online</h3>
+                <p class="mb-0">
+                    Realiza toda la documentación necesaria 100% digital y seguro
+                </p>
+            </div>
+            <div class="col-sm-6 col-lg-4 text-center my-3">
+                <i class="bi bi-bullseye"></i>
+                <h3>TuScore</h3>
+                <p class="mb-0">
+                    Compara tanto inquilinos como arrendadores con nuestro score basado en inteligencia artifical y
+                    elige los mejores
+                </p>
+            </div>
+            <div class="col-sm-6 col-lg-4 text-center my-3">
+                <i class="bi bi-credit-card"></i>
+                <h3>Paga rápido</h3>
+                <p class="mb-0">
+                    Paga o cobra tu renta con varias opciones de pago
+                </p>
+            </div>
+            <div class="col-sm-6 col-lg-4 text-center my-3">
+                <i class="bi bi-clipboard-check"></i>
+                <h3>Inventario digital</h3>
+                <p class="mb-0">
+                    Crea el inventario de tu propiedad y mantenlo actualizado
+                </p>
+            </div>
+            <div class="col-sm-6 col-lg-4 text-center my-3">
+                <i class="bi bi-truck"></i>
+                <h3>Mudanza</h3>
+                <p class="mb-0">
+                    Elige la mejor empresa que se acomode a tus necesidades para el día de tu mudanza
+                </p>
+            </div>
+            <div class="col-sm-6 col-lg-4 text-center my-3">
+                <i class="bi bi-piggy-bank"></i>
+                <h3>TuRent</h3>
+                <p class="mb-0">
+                    Te ayudamos a calcular el mejor valor para rentar tu propiedad
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Scripts -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 <script src="https://cdn.linearicons.com/free/1.0.0/svgembedder.min.js"></script>
+
 </body>
+
 </html>
