little changes features section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body id="page-top">
 
+<!--Navbar-->
 <nav class="navbar navbar-expand-lg navbar-light shadow-sm" id="mainNav">
     <div class="container px-5">
         <a class="navbar-brand fw-bold" href="#page-top">
@@ -31,10 +32,7 @@
                     <a class="nav-link me-lg-3" href="#how-works">Como funciona</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link me-lg-3" href="#features">Servicios</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link me-lg-3" href="#contact">Contact</a>
+                    <a class="nav-link me-lg-3" href="#features">Características</a>
                 </li>
             </ul>
         </div>
@@ -106,8 +104,13 @@
     </div>
 </aside>
 <!--features-->
-<section class="py-4">
+<section class="py-4" id="features">
     <div class="container px-5">
+        <div class="row justify-content-center my-4">
+            <div class="col-sm-12 text-center">
+                <h2 class="display-6"> Soluciones simples a problemas complejos... </h2>
+            </div>
+        </div>
         <div class="row justify-content-center">
             <div class="col-sm-6 col-lg-4 text-center my-3">
                 <i class="bi bi-pen"></i>
