--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <div class="col-md-6 col-sm-8">
                 <h1 class="display-2 lh-1"> Mejores lugares y personas</h1>
                 <p class="my-4 fw-light">
-                    Descubre la nueva forma de encontrar casa o departamento para vivir, local para tu negocio o los
-                    mejores inquilinos para tu propiedad
+                    Descubre la nueva forma de arrendar! Encuentra casa o departamento para vivir, local para tu negocio
+                    o los mejores inquilinos
                 </p>
             </div>
             <div class="col-md-6 col-sm-4 d-flex align-items-center justify-content-center">
@@ -72,9 +72,9 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Arrendar sin complicaciones</h5>
                         <p class="card-text lh-sm fw-light info-card">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab blanditiis
-                            dolorum eius ipsam laudantium molestiae nulla, quia similique soluta. A assumenda cupiditate
-                            deserunt harum ipsa nam nostrum odio suscipit! Quidem!
+                            Olvidate de procesos lentos con mucho papeleo y molestos! Registrate y en pocos pasos podrás
+                            arrendar la propiedad que sueñas o encontrar inquilinos que mejor se acomoden a tus
+                            expectativas
                         </p>
                     </div>
                 </div>
@@ -82,11 +82,11 @@
             <div class="col-lg-3 col-sm-12 my-2 mx-5">
                 <div class="card h-100 px-3 py-3 shadow-lg">
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Encontrar los mejores inquilinos o arrendadores</h5>
+                        <h5 class="card-title fw-bold">Encontrar siempre lo mejor</h5>
                         <p class="card-text lh-sm fw-light info-card">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam at beatae
-                            commodi culpa delectus distinctio ducimus earum hic inventore iure laudantium magni, neque
-                            numquam quos, ratione sed sint ullam voluptates.
+                            Elige entre un sin número de propiedades con información verificada, los mejores
+                            inquilinos y/o arrendadores en base a nuestro análisis y precios que se acomoden a tu perfil
+                            y tus necesidades.
                         </p>
                     </div>
                 </div>
@@ -96,9 +96,8 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Adminsitrar todas tus propiedades</h5>
                         <p class="card-text lh-sm fw-light info-card">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam at beatae
-                            commodi culpa delectus distinctio ducimus earum hic inventore iure laudantium magni, neque
-                            numquam quos, ratione sed sint ullam voluptates.
+                            Toma el control total de todo lo que sucede administrando el proceso de arrendamiento de
+                            inicio a fin, pagos y cobros, cambios en tus propiedades, mudanza y mucho más!
                         </p>
                     </div>
                 </div>
@@ -126,22 +125,22 @@
                 <i class="bi bi-bullseye"></i>
                 <h3>TuScore</h3>
                 <p class="mb-0 fw-light">
-                    Compara tanto inquilinos como arrendadores con nuestro score basado en inteligencia artifical y
-                    elige los mejores
+                    Compara inquilinos y arrendadores con nuestro score basado en inteligencia artifical y
+                    elige a los mejores
                 </p>
             </div>
             <div class="col-sm-6 col-lg-4 text-center my-3">
                 <i class="bi bi-credit-card"></i>
-                <h3>Paga rápido</h3>
+                <h3>Pago rápido</h3>
                 <p class="mb-0 fw-light">
-                    Paga o cobra tu renta con varias opciones de pago
+                    Paga o cobra tu renta de aforma automática con varias opciones
                 </p>
             </div>
             <div class="col-sm-6 col-lg-4 text-center my-3">
                 <i class="bi bi-clipboard-check"></i>
                 <h3>Inventario digital</h3>
                 <p class="mb-0 fw-light">
-                    Crea el inventario de tu propiedad y mantenlo actualizado
+                    Crea el inventario de tus propiedades y mantenlos actualizados
                 </p>
             </div>
             <div class="col-sm-6 col-lg-4 text-center my-3">
@@ -167,15 +166,15 @@
         <div class="row">
             <div class="col-lg-5 col-md-6 mb-5">
                 <p class="fs-3 fw-bolder text-white pb-2"> Descarga la app </p>
-                <div class="col-12 d-flex align-items-center mt-4 mb-3">
+                <div class="col-12 d-flex align-items-center mt-4 mb-5">
                     <img src="assets/img/tunido_logo.png" width="50" height="50" class="d-inline-block align-center"
                          alt="">
                     <h3 class="mx-1 tunido-title-footer">TUNIDO</h3>
                 </div>
-                <a class="my-4" href="https://play.google.com/">
+                <a class="d-block mb-2" href="https://play.google.com/">
                     <img src="./assets/img/google-play-badge.svg" class="d-inline-block align-center app-badge" alt=""/>
                 </a>
-                <a class="my-4" href="https://www.apple.com/la/app-store/">
+                <a class="d-block mb-2" href="https://www.apple.com/la/app-store/">
                     <img src="./assets/img/app-store-badge.svg" class="d-inline-block align-center app-badge" alt=""/>
                 </a>
             </div>
